tests/reference/asr-test_print2-64acb15.stderr
semantic error: End is expected to be of string type
 --> tests/errors/test_print2.py:2:26
  |
2 |      print("a", "b", end=1)
  |                          ^ Expected string, found: integer


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
